Dep refactorization